--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <template id ="upload">
             <div class="shadow">
                     <div id = "upload-screen">
-                        <a href="../"><img src="close-search.png" alt="" class="close"></a>
+                        <img src="close-search.png" alt="" class="close">
                         <input class="input-upload" type="text" name="username" value="" placeholder="Username">
                         <input class="input-upload" type="text" name="title" value="" placeholder="Title">
                         <input class="input-upload" type="text" name="description" value="" placeholder="Description">
@@ -45,7 +45,7 @@
                      {{#each images}}
                          <div class="elem">
                              <h3 class = "title">{{this.title}}</h3>
-                            <div class= "imgBackground"><a href="./#images/{{this.id}}" class="img"><img src="{{this.url}}" class = "image"alt=""></a></div>
+                            <div class= "imgBackground"><a href="./#images/{{this.id}}" class="img"><img src="{{this.url}}" class="image"alt=""></a></div>
                             <p class="username">by {{this.username}}</p>
                         </div>
                      {{/each}}
@@ -55,7 +55,7 @@
         <template id="image">
             <div class="shadow">
                 <div class="single-image-div">
-                    <a href="../"><img src="close-search.png" alt="" class="close"></a>
+                    <img src="close-search.png" alt="" class="close">
                     <img class="single-image" src="{{this.image}}" alt="">
                     <p>Title: {{this.title}}</p>
                     <p>Description: {{this.description}}</p>
