added responsive design to home and upload view

--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>My Imageboard</title>
         <link rel="stylesheet" href="stylesheet.css">
 
 
     </head>
     <body>
+
 
     <div class ="header">
 
@@ -51,6 +53,11 @@
                             <p class="username">by {{this.username}}</p>
                         </div>
                      {{/each}}
+
+
+                </div>
+                <div class="footerMore">
+                   <button type="button" class="upload-button" id ="moreImages" name="button">More Images</button>
                 </div>
         </template>
 
