--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Imageboard</title>
         <link rel="stylesheet" href="stylesheet.css">
-
-
     </head>
     <body>
 
@@ -56,9 +54,9 @@
 
 
                 </div>
-                <div class="footerMore">
+                <!-- <div class="footerMore">
                    <button type="button" class="upload-button" id ="moreImages" name="button">More Images</button>
-                </div>
+                </div> -->
         </template>
 
         <template id="image">
